--- a/index.html
+++ b/index.html
@@ -8,37 +8,36 @@
 </head>
 <body>
     <div class="container">
-        <!-- <img src="/images/background-pattern-desktop.svg" alt=""> -->
         <div class="faq-card">
             <div class="head">
-                <img src="images/icon-star.svg" alt="">
+                <img src="icon-star.svg" alt="">
                 <h1>FAQ</h1>
             </div>
             <div class="question">
                 <div class="headline">
                     <h4>What is FrontEnd Mentor, and how will it help me?</h4>
-                    <img src="images/icon-plus.svg" alt="">
+                    <img src="icon-plus.svg" alt="">
                 </div>
                 <p>Frontend Mentor offers realistic coding challenges to help developers improve coding skills with projects in HTML, CSS, Javascript. It's suitable for all levels and ideal for portfolio building.</p>
             </div>
             <div class="question">
                 <div class="headline">
                     <h4>Can I use these projects in my portfolio?</h4>
-                    <img src="images/icon-plus.svg" alt="">
+                    <img src="icon-plus.svg" alt="">
                 </div>
                 <p>Definitely! Please do feel free to use whatever you build in your portfolio. Helping developers add professional-looking projects to their portfolio was one of the reasons we created this platform!</p>
             </div>
             <div class="question">
                 <div class="headline">
                     <h4>How can I get help if I'm stuck on a challenge?</h4>
-                    <img src="images/icon-plus.svg" alt="">
+                    <img src="icon-plus.svg" alt="">
                 </div>
                 <p>The best (and quickest) way to get help on a challenge is in our Discord server. There are thousands of other developers in there, so it's a great place to ask questions. We even have a dedicated "help" channel! If you haven't joined yet, you can get an invite to our Discord server here.</p>
             </div>
             <div class="question">
                 <div class="headline">
                     <h4>How often are new challenges added?</h4>
-                    <img src="images/icon-plus.svg" alt="">
+                    <img src="icon-plus.svg" alt="">
                 </div>
                 <p>We launch a new challenge every two weeks. We alternate between free and premium challenge launches, so we launch one free and one premium challenge each month.</p>
             </div>
